@@ -19,7 +19,7 @@
         <step>start sensord</step>
         <step>sleep 2</step>
       </case>
-      <case name="Sensor_Client_API" level="Component" type="Functional" description="Client API tests for sensord" timeout="15" subfeature="Sensor Framework">
+      <case name="Sensor_Client_API" level="Component" type="Functional" description="Client API tests for sensord" timeout="30" subfeature="Sensor Framework">
         <step expected_result="0">/usr/bin/sensorapi-test</step>
       </case>
       <case name="Sensor_MetaData" level="Component" type="Functional" description="Sensor metadata tests for sensord" timeout="15" subfeature="Sensor Framework">
